--- a/index.html
+++ b/index.html
@@ -5,16 +5,24 @@
 <b> URL:</b> <a href="https://js-jehvqj.stackblitz.io"> https://js-jehvqj.stackblitz.io </a> <br>
 
 <!-- Esto es un comentario -->
-<b> Github:</b> <a href="https://github.com/JoseCuevasM/08MBID---Visualizacion-de-Datos"> https://github.com/JoseCuevasM </a> <br>
-
-
-<iframe width="749" height="463" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vTSeeVIO18DBf7z9dNhvThiHtWKXF7wH2rf7Yd7SoRI23GkqBAlk6-9KJGBLUqOXYoBD_ULYrwVwJvP/pubchart?oid=1099494841&amp;format=interactive"></iframe>
+<b> Github:</b> <a href="https://github.com/JoseCuevasM/08MBID---Visualizacion-de-Datos"> https://github.com/JoseCuevasM </a>
 
 <br>
+<h2> Parte 1: Gráficos desde Google Sheets</h2>
+<br>
 
+<iframe width="600" height="371" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vTSeeVIO18DBf7z9dNhvThiHtWKXF7wH2rf7Yd7SoRI23GkqBAlk6-9KJGBLUqOXYoBD_ULYrwVwJvP/pubchart?oid=71761708&amp;format=interactive"></iframe>
 
-<b> Datos:</b> <a href="https://docs.google.com/spreadsheets/d/1QVuiTxJfj0xKhu3S72F1S9IFVRjrJvvryJkRpoQMC1k/edit?usp=sharing"> Google Sheets Datos </a> <br>
+<br>
+<b> Datos:</b> <a href="https://docs.google.com/spreadsheets/d/1QVuiTxJfj0xKhu3S72F1S9IFVRjrJvvryJkRpoQMC1k/edit?usp=sharing"> Google Sheets Datos - Emisiones CO2 </a> <br>
 
+<iframe width="600" height="371" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vTkZ4Go5iIve3F14ES1jX1ktcfIgs-cO5XiQdfBoDY2KJRxxyp402FdMiJUDb5dnh6idb7DoL4cUMVJ/pubchart?oid=544780&amp;format=interactive"></iframe>
+<br>
+<b> Datos:</b> <a href="https://docs.google.com/spreadsheets/d/1oX21gW3hp9KA0zwG8scS2EcsCjDAcnubaUKJMXtfHQs/edit?usp=sharing"> Google Sheets Datos - Precio Vs Volumen </a> <br>
 
+<h2> Parte 2: Gráficos desde Datawrapper</h2>
 <br>
 <iframe title="Renta per capita vs Emisión" aria-label="Scatter Plot" id="datawrapper-chart-3UobE" src="https://datawrapper.dwcdn.net/3UobE/1/" scrolling="no" frameborder="0" style="border: none;" width="600" height="400"></iframe>
+
+<br>
+<iframe title="Top 10 Emisiones CO2 en 2020" aria-label="Bar Chart" id="datawrapper-chart-rF00S" src="https://datawrapper.dwcdn.net/rF00S/1/" scrolling="no" frameborder="0" style="border: none;" width="600" height="364"></iframe>
