--- a/index.html
+++ b/index.html
@@ -25,4 +25,7 @@
 <iframe title="Renta per capita vs Emisión" aria-label="Scatter Plot" id="datawrapper-chart-3UobE" src="https://datawrapper.dwcdn.net/3UobE/1/" scrolling="no" frameborder="0" style="border: none;" width="600" height="400"></iframe>
 
 <br>
+<br>
 <iframe title="Top 10 Emisiones CO2 en 2020" aria-label="Bar Chart" id="datawrapper-chart-rF00S" src="https://datawrapper.dwcdn.net/rF00S/1/" scrolling="no" frameborder="0" style="border: none;" width="600" height="364"></iframe>
+<br> 
+<b> Data Procesada:</b> <a href="https://docs.google.com/spreadsheets/d/1ou7w-hXvFiI-b5EP0IeDNVvEjFLDZb3CbdZRvZCotbE/edit?usp=sharing"> Google Sheets datos procesados top 10 </a> <br>
