--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@ script>
 
 <!-- Esto es un comentario -->
 <b> Github:</b> <a href="https://github.com/JoseCuevasM/08MBID---Visualizacion-de-Datos"> https://github.com/JoseCuevasM </a>
+<!-- Esto es un comentario -->
+<b> Google Colab:</b> <a href="https://colab.research.google.com/drive/1oPrJaJhQ_ScvnyFSgOP9bxJPMgy0b6iN?usp=sharing"> Google Colab Link</a>
+
 
 <br>
 <h2> Parte 1: Gráficos desde Google Sheets</h2>
