--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@ script>
 <b> URL:</b> <a href="https://js-jehvqj.stackblitz.io"> https://js-jehvqj.stackblitz.io </a> <br>
 
 <!-- Esto es un comentario -->
-<b> Github:</b> <a href="https://github.com/JoseCuevasM/08MBID---Visualizacion-de-Datos"> https://github.com/JoseCuevasM </a>
+<b> Github:</b> <a href="https://github.com/JoseCuevasM/08MBID---Visualizacion-de-Datos"> https://github.com/JoseCuevasM </a> <br>
+
 <!-- Esto es un comentario -->
 <b> Google Colab:</b> <a href="https://colab.research.google.com/drive/1oPrJaJhQ_ScvnyFSgOP9bxJPMgy0b6iN?usp=sharing"> Google Colab Link</a>
 
