--- a/index.html
+++ b/index.html
@@ -42,3 +42,6 @@ script>
 <h1> Visualización - AG3 </h1>
 <h2> Gráfico de Columnas con D3Plus</h2>
 <div id="viz1"></div>
+
+<h2> Gráfico de Boxplot con D3Plus</h2>
+<div id="viz2"></div>
