--- a/index.html
+++ b/index.html
@@ -43,5 +43,8 @@ script>
 <h2> Gráfico de Columnas con D3Plus</h2>
 <div id="viz1"></div>
 
+<h2> Gráfico de multicolumna con D3Plus</h2>
+<div id="viz3"></div>
+
 <h2> Gráfico de Boxplot con D3Plus</h2>
 <div id="viz2"></div>
