--- a/index.html
+++ b/index.html
@@ -39,7 +39,10 @@ script>
 <iframe title="Top 10 Emisiones CO2 en 2020" aria-label="Bar Chart" id="datawrapper-chart-rF00S" src="https://datawrapper.dwcdn.net/rF00S/1/" scrolling="no" frameborder="0" style="border: none;" width="600" height="364"></iframe>
 
 <h1> Visualización - AG2  - PowerBI</h1>
-<iframe title="AG2-Peliculas - Pto. y Recaudacion x Genero" width="1140" height="541.25" src="https://app.powerbi.com/reportEmbed?reportId=65e6aa14-96a9-4bf9-bb72-39d49f3f0e33&autoAuth=true&ctid=02674ef9-5c2c-47d0-b2bc-595a784dda00&config=eyJjbHVzdGVyVXJsIjoiaHR0cHM6Ly93YWJpLXdlc3QtZXVyb3BlLWItcHJpbWFyeS1yZWRpcmVjdC5hbmFseXNpcy53aW5kb3dzLm5ldC8ifQ%3D%3D" frameborder="0" allowFullScreen="true"></iframe>
+<iframe title="AG2-Peliculas" width="1140" height="541.25" src="https://app.powerbi.com/reportEmbed?reportId=65e6aa14-96a9-4bf9-bb72-39d49f3f0e33&autoAuth=true&ctid=02674ef9-5c2c-47d0-b2bc-595a784dda00&config=eyJjbHVzdGVyVXJsIjoiaHR0cHM6Ly93YWJpLXdlc3QtZXVyb3BlLWItcHJpbWFyeS1yZWRpcmVjdC5hbmFseXNpcy53aW5kb3dzLm5ldC8ifQ%3D%3D" frameborder="0" allowFullScreen="true"></iframe>
+<br>
+<iframe title="AG2-Peliculas" width="1140" height="541.25" src="https://app.powerbi.com/reportEmbed?reportId=65e6aa14-96a9-4bf9-bb72-39d49f3f0e33&autoAuth=true&ctid=02674ef9-5c2c-47d0-b2bc-595a784dda00&config=eyJjbHVzdGVyVXJsIjoiaHR0cHM6Ly93YWJpLXdlc3QtZXVyb3BlLWItcHJpbWFyeS1yZWRpcmVjdC5hbmFseXNpcy53aW5kb3dzLm5ldC8ifQ%3D%3D&pageName=Evolucion" frameborder="0" allowFullScreen="true"></iframe>
+
 
 
 <h1> Visualización - AG3 - D3 Plus </h1>
